--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1941,14 +1941,21 @@ hero_p{
   --bs-btn-bg: #0e1d34;
   --bs-btn-border-color: #0e1d34;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #31d2f2;
-  --bs-btn-hover-border-color: #25cff2;
+  /* --bs-btn-hover-bg: #31d2f2;
+  --bs-btn-hover-border-color: #25cff2; */
   --bs-btn-focus-shadow-rgb: 11,172,204;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #3dd5f3;
-  --bs-btn-active-border-color: #25cff2;
+  /* --bs-btn-active-bg: #3dd5f3; */
+  /* --bs-btn-active-border-color: #25cff2; */
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #0dcaf0;
-  --bs-btn-disabled-border-color: #0dcaf0;
+  /* --bs-btn-disabled-bg: #0dcaf0; */
+  /* --bs-btn-disabled-border-color: #0dcaf0; */
+}
+
+.btn-info-edt {
+  color: white !important;
+  background: #0d42ff;
+  padding: 3px 12px;
+  margin-right: 3px;
 }
