--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -760,6 +760,8 @@ section {
   position: relative;
   border-radius: 0;
   height: 100%;
+  border-radius: 6px;
+  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
 
 .services .card .card-img {
@@ -1973,4 +1975,15 @@ hero_p{
 }
 .btn-info{
   background: #0d42ff !important;
+  border: none !important;
+  border-radius: 6px !important;
+}
+
+.btn_info{
+  transition: none !important;
+  border-radius: 6px !important;
+  margin-right: 2px !important;
+  margin-top: 2px !important;
+  padding: 2px 16px;
+
 }
